[project]
name = "downtubev1"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuzel",email = "emanuelvictor.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "moviepy (>=2.2.1,<3.0.0)",
    "pytubefix (>=10.3.6,<11.0.0)",
    "ffmpeg (>=1.4,<2.0)"
]

[tool.poetry]
packages = [{include = "downtubev1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
